--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "admin-lte": "^3.2.0",
+    "bootstrap": "^5.3.0",
+    "classnames": "^2.5.1",
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
-    "admin-lte": "^3.2.0",
-    "@fortawesome/fontawesome-free": "^6.4.0",
-    "sweetalert2": "^11.7.12"
+    "reactstrap": "^9.2.0",
+    "sweetalert2": "^11.7.12",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
